# vcgencmd-rs

./: .gitlab-ci.yml  Cargo.toml  LICENSE  PROGRESS.md  README.md
src/: lib.rs  parsers.rs
tests/: integration_test.rs
