[package]
name = "vcgencmd"
license = "MIT"
version = "0.1.4"
authors = ["Linus Keiser <linus@keiser.co>"]
edition = "2018"
description = "Bindings for Raspberry Pi's vcgencmd utility"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subprocess = "0.1.18"
