[package]
name = "vcgencmd"
categories: ["embedded", "hardware-support"]
keywords: ["raspberry", "pi", "info", "system"]
license = "MIT"
version = "0.1.4"
authors = ["Linus Keiser <linus@keiser.co>"]
edition = "2018"
description = "Bindings for Raspberry Pi's vcgencmd utility"
readme = "README.md"

[features]
default = []
serde = ["serde"]

[dependencies]
subprocess = "0.1.18"
bitpat = "0.1.1"
serde = {version = "1.0.98", optional = true}