[package]
name = "vcgencmd"
categories = ["embedded", "hardware-support"]
keywords = ["raspberry", "pi", "raspberrypi", "info", "system"]
license = "MIT"
version = "0.3.0"
documentation = "https://docs.rs/vcgencmd"
repository = "https://gitlab.com/decisional/vcgencmd-rs"
homepage = "https://gitlab.com/decisional/vcgencmd-rs"
authors = ["Linus Keiser <linus@keiser.co>"]
edition = "2018"
description = "Bindings for Raspberry Pi's vcgencmd utility"
readme = "README.md"

[package.metadata.docs.rs]
features = ["serde"]
default-target = "armv7-unknown-linux-gnueabihf"

[features]
default = []

# Not needed for now, serde feature works implicitly...
#[namespaced-features]
#serde = ["crate:serde"]

[dependencies]
subprocess = "0.1.18"
bitpat = "0.1.1"
serde = { version = "1.0.99", features = ["derive"], optional = true }
